--- a/IA/Modelos de Generación de Datos/UNet/First/Untitled.ipynb
+++ b/IA/Modelos de Generación de Datos/UNet/First/Untitled.ipynb
@@ -43,22 +43,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# example of defining a 70x70 patchgan discriminator model\n",
+    "# example of defining a composite model for training the generator model\n",
     "from keras.optimizers import Adam\n",
     "from keras.initializers import RandomNormal\n",
     "from keras.models import Model\n",
     "from keras.models import Input\n",
     "from keras.layers import Conv2D\n",
+    "from keras.layers import Conv2DTranspose\n",
     "from keras.layers import LeakyReLU\n",
     "from keras.layers import Activation\n",
     "from keras.layers import Concatenate\n",
+    "from keras.layers import Dropout\n",
     "from keras.layers import BatchNormalization\n",
+    "from keras.layers import LeakyReLU\n",
     "from keras.utils.vis_utils import plot_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +107,114 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define an encoder block\n",
+    "def define_encoder_block(layer_in, n_filters, batchnorm=True):\n",
+    "\t# weight initialization\n",
+    "\tinit = RandomNormal(stddev=0.02)\n",
+    "\t# add downsampling layer\n",
+    "\tg = Conv2D(n_filters, (4,4), strides=(2,2), padding='same', kernel_initializer=init)(layer_in)\n",
+    "\t# conditionally add batch normalization\n",
+    "\tif batchnorm:\n",
+    "\t\tg = BatchNormalization()(g, training=True)\n",
+    "\t# leaky relu activation\n",
+    "\tg = LeakyReLU(alpha=0.2)(g)\n",
+    "\treturn g"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define a decoder block\n",
+    "def decoder_block(layer_in, skip_in, n_filters, dropout=True):\n",
+    "\t# weight initialization\n",
+    "\tinit = RandomNormal(stddev=0.02)\n",
+    "\t# add upsampling layer\n",
+    "\tg = Conv2DTranspose(n_filters, (4,4), strides=(2,2), padding='same', kernel_initializer=init)(layer_in)\n",
+    "\t# add batch normalization\n",
+    "\tg = BatchNormalization()(g, training=True)\n",
+    "\t# conditionally add dropout\n",
+    "\tif dropout:\n",
+    "\t\tg = Dropout(0.5)(g, training=True)\n",
+    "\t# merge with skip connection\n",
+    "\tg = Concatenate()([g, skip_in])\n",
+    "\t# relu activation\n",
+    "\tg = Activation('relu')(g)\n",
+    "\treturn g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define the standalone generator model\n",
+    "def define_generator(image_shape=(256,256,3)):\n",
+    "\t# weight initialization\n",
+    "\tinit = RandomNormal(stddev=0.02)\n",
+    "\t# image input\n",
+    "\tin_image = Input(shape=image_shape)\n",
+    "\t# encoder model: C64-C128-C256-C512-C512-C512-C512-C512\n",
+    "\te1 = define_encoder_block(in_image, 64, batchnorm=False)\n",
+    "\te2 = define_encoder_block(e1, 128)\n",
+    "\te3 = define_encoder_block(e2, 256)\n",
+    "\te4 = define_encoder_block(e3, 512)\n",
+    "\te5 = define_encoder_block(e4, 512)\n",
+    "\te6 = define_encoder_block(e5, 512)\n",
+    "\te7 = define_encoder_block(e6, 512)\n",
+    "\t# bottleneck, no batch norm and relu\n",
+    "\tb = Conv2D(512, (4,4), strides=(2,2), padding='same', kernel_initializer=init)(e7)\n",
+    "\tb = Activation('relu')(b)\n",
+    "\t# decoder model: CD512-CD1024-CD1024-C1024-C1024-C512-C256-C128\n",
+    "\td1 = decoder_block(b, e7, 512)\n",
+    "\td2 = decoder_block(d1, e6, 512)\n",
+    "\td3 = decoder_block(d2, e5, 512)\n",
+    "\td4 = decoder_block(d3, e4, 512, dropout=False)\n",
+    "\td5 = decoder_block(d4, e3, 256, dropout=False)\n",
+    "\td6 = decoder_block(d5, e2, 128, dropout=False)\n",
+    "\td7 = decoder_block(d6, e1, 64, dropout=False)\n",
+    "\t# output\n",
+    "\tg = Conv2DTranspose(3, (4,4), strides=(2,2), padding='same', kernel_initializer=init)(d7)\n",
+    "\tout_image = Activation('tanh')(g)\n",
+    "\t# define model\n",
+    "\tmodel = Model(in_image, out_image)\n",
+    "\treturn model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define the combined generator and discriminator model, for updating the generator\n",
+    "def define_gan(g_model, d_model, image_shape):\n",
+    "\t# make weights in the discriminator not trainable\n",
+    "\td_model.trainable = False\n",
+    "\t# define the source image\n",
+    "\tin_src = Input(shape=image_shape)\n",
+    "\t# connect the source image to the generator input\n",
+    "\tgen_out = g_model(in_src)\n",
+    "\t# connect the source input and generator output to the discriminator input\n",
+    "\tdis_out = d_model([in_src, gen_out])\n",
+    "\t# src image as input, generated image and classification output\n",
+    "\tmodel = Model(in_src, [dis_out, gen_out])\n",
+    "\t# compile model\n",
+    "\topt = Adam(lr=0.0002, beta_1=0.5)\n",
+    "\tmodel.compile(loss=['binary_crossentropy', 'mae'], optimizer=opt, loss_weights=[1,100])\n",
+    "\treturn model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -114,76 +224,114 @@
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_13 (InputLayer)           (None, 256, 256, 3)  0                                            \n",
+      "input_7 (InputLayer)            (None, 256, 256, 3)  0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "input_14 (InputLayer)           (None, 256, 256, 3)  0                                            \n",
+      "model_4 (Model)                 (None, 256, 256, 3)  54429315    input_7[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_7 (Concatenate)     (None, 256, 256, 6)  0           input_13[0][0]                   \n",
-      "                                                                 input_14[0][0]                   \n",
-      "__________________________________________________________________________________________________\n",
-      "conv2d_37 (Conv2D)              (None, 128, 128, 64) 6208        concatenate_7[0][0]              \n",
-      "__________________________________________________________________________________________________\n",
-      "leaky_re_lu_31 (LeakyReLU)      (None, 128, 128, 64) 0           conv2d_37[0][0]                  \n",
-      "__________________________________________________________________________________________________\n",
-      "conv2d_38 (Conv2D)              (None, 64, 64, 128)  131200      leaky_re_lu_31[0][0]             \n",
-      "__________________________________________________________________________________________________\n",
-      "batch_normalization_25 (BatchNo (None, 64, 64, 128)  512         conv2d_38[0][0]                  \n",
-      "__________________________________________________________________________________________________\n",
-      "leaky_re_lu_32 (LeakyReLU)      (None, 64, 64, 128)  0           batch_normalization_25[0][0]     \n",
-      "__________________________________________________________________________________________________\n",
-      "conv2d_39 (Conv2D)              (None, 32, 32, 256)  524544      leaky_re_lu_32[0][0]             \n",
-      "__________________________________________________________________________________________________\n",
-      "batch_normalization_26 (BatchNo (None, 32, 32, 256)  1024        conv2d_39[0][0]                  \n",
-      "__________________________________________________________________________________________________\n",
-      "leaky_re_lu_33 (LeakyReLU)      (None, 32, 32, 256)  0           batch_normalization_26[0][0]     \n",
-      "__________________________________________________________________________________________________\n",
-      "conv2d_40 (Conv2D)              (None, 16, 16, 512)  2097664     leaky_re_lu_33[0][0]             \n",
-      "__________________________________________________________________________________________________\n",
-      "batch_normalization_27 (BatchNo (None, 16, 16, 512)  2048        conv2d_40[0][0]                  \n",
-      "__________________________________________________________________________________________________\n",
-      "leaky_re_lu_34 (LeakyReLU)      (None, 16, 16, 512)  0           batch_normalization_27[0][0]     \n",
-      "__________________________________________________________________________________________________\n",
-      "conv2d_41 (Conv2D)              (None, 16, 16, 512)  4194816     leaky_re_lu_34[0][0]             \n",
-      "__________________________________________________________________________________________________\n",
-      "batch_normalization_28 (BatchNo (None, 16, 16, 512)  2048        conv2d_41[0][0]                  \n",
-      "__________________________________________________________________________________________________\n",
-      "leaky_re_lu_35 (LeakyReLU)      (None, 16, 16, 512)  0           batch_normalization_28[0][0]     \n",
-      "__________________________________________________________________________________________________\n",
-      "conv2d_42 (Conv2D)              (None, 16, 16, 1)    8193        leaky_re_lu_35[0][0]             \n",
-      "__________________________________________________________________________________________________\n",
-      "activation_7 (Activation)       (None, 16, 16, 1)    0           conv2d_42[0][0]                  \n",
+      "model_3 (Model)                 (None, 16, 16, 1)    6968257     input_7[0][0]                    \n",
+      "                                                                 model_4[1][0]                    \n",
       "==================================================================================================\n",
-      "Total params: 6,968,257\n",
-      "Trainable params: 6,965,441\n",
-      "Non-trainable params: 2,816\n",
+      "Total params: 61,397,572\n",
+      "Trainable params: 54,419,459\n",
+      "Non-trainable params: 6,978,113\n",
       "__________________________________________________________________________________________________\n"
-     ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "Failed to import `pydot`. Please install `pydot`. For example with `pip install pydot`.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-09395cd357a1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# plot the model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mplot_model\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mto_file\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'discriminator_model_plot.png'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshow_shapes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshow_layer_names\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mD:\\Programas\\AnacondaFinal\\lib\\site-packages\\keras\\utils\\vis_utils.py\u001b[0m in \u001b[0;36mplot_model\u001b[1;34m(model, to_file, show_shapes, show_layer_names, rankdir)\u001b[0m\n\u001b[0;32m    130\u001b[0m             \u001b[1;34m'LR'\u001b[0m \u001b[0mcreates\u001b[0m \u001b[0ma\u001b[0m \u001b[0mhorizontal\u001b[0m \u001b[0mplot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    131\u001b[0m     \"\"\"\n\u001b[1;32m--> 132\u001b[1;33m     \u001b[0mdot\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel_to_dot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshow_shapes\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshow_layer_names\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrankdir\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    133\u001b[0m     \u001b[0m_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mextension\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplitext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mto_file\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    134\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mextension\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mD:\\Programas\\AnacondaFinal\\lib\\site-packages\\keras\\utils\\vis_utils.py\u001b[0m in \u001b[0;36mmodel_to_dot\u001b[1;34m(model, show_shapes, show_layer_names, rankdir)\u001b[0m\n\u001b[0;32m     53\u001b[0m     \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSequential\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     54\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 55\u001b[1;33m     \u001b[0m_check_pydot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     56\u001b[0m     \u001b[0mdot\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpydot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m     \u001b[0mdot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'rankdir'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrankdir\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mD:\\Programas\\AnacondaFinal\\lib\\site-packages\\keras\\utils\\vis_utils.py\u001b[0m in \u001b[0;36m_check_pydot\u001b[1;34m()\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mpydot\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m         raise ImportError(\n\u001b[1;32m---> 20\u001b[1;33m             \u001b[1;34m'Failed to import `pydot`. '\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     21\u001b[0m             \u001b[1;34m'Please install `pydot`. '\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m             'For example with `pip install pydot`.')\n",
-      "\u001b[1;31mImportError\u001b[0m: Failed to import `pydot`. Please install `pydot`. For example with `pip install pydot`."
      ]
     }
    ],
    "source": [
     "# define image shape\n",
     "image_shape = (256,256,3)\n",
-    "# create the model\n",
-    "model = define_discriminator(image_shape)\n",
+    "# define the models\n",
+    "d_model = define_discriminator(image_shape)\n",
+    "g_model = define_generator(image_shape)\n",
+    "# define the composite model\n",
+    "gan_model = define_gan(g_model, d_model, image_shape)\n",
     "# summarize the model\n",
-    "model.summary()\n",
+    "gan_model.summary()\n",
     "# plot the model\n",
-    "plot_model(model, to_file='discriminator_model_plot.png', show_shapes=True, show_layer_names=True)"
+    "plot_model(gan_model, to_file='gan_model_plot.png', show_shapes=True, show_layer_names=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# select a batch of random samples, returns images and target\n",
+    "def generate_real_samples(dataset, n_samples, patch_shape):\n",
+    "\t# unpack dataset\n",
+    "\ttrainA, trainB = dataset\n",
+    "\t# choose random instances\n",
+    "\tix = randint(0, trainA.shape[0], n_samples)\n",
+    "\t# retrieve selected images\n",
+    "\tX1, X2 = trainA[ix], trainB[ix]\n",
+    "\t# generate 'real' class labels (1)\n",
+    "\ty = ones((n_samples, patch_shape, patch_shape, 1))\n",
+    "\treturn [X1, X2], y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generate a batch of images, returns images and targets\n",
+    "def generate_fake_samples(g_model, samples, patch_shape):\n",
+    "\t# generate fake instance\n",
+    "\tX = g_model.predict(samples)\n",
+    "\t# create 'fake' class labels (0)\n",
+    "\ty = zeros((len(X), patch_shape, patch_shape, 1))\n",
+    "\treturn X, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# select a batch of real samples\n",
+    "#[X_realA, X_realB], y_real = generate_real_samples(dataset, n_batch, n_patch)\n",
+    "\n",
+    "\n",
+    "# generate a batch of fake samples\n",
+    "#X_fakeB, y_fake = generate_fake_samples(g_model, X_realA, n_patch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# update discriminator for real samples\n",
+    "#d_loss1 = d_model.train_on_batch([X_realA, X_realB], y_real)\n",
+    "# update discriminator for generated samples\n",
+    "#d_loss2 = d_model.train_on_batch([X_realA, X_fakeB], y_fake)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# update the generator\n",
+    "#g_loss, _, _ = gan_model.train_on_batch(X_realA, [y_real, X_realB])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
